running it via content_Scripts

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,13 +12,17 @@
     "type": "module"
   },
 
-  "permissions": ["tabs", "scripting"],
+  "permissions": ["storage"],
 
-  "host_permissions": [
-    "http://*/*",
-    "https://*/*"
-  ],
-      "icons" : {
-        "32":"icon32.png"
+  "content_scripts": [
+    {
+      "matches": ["https://*/*"],
+      "js": ["inject.js"],
+      "run_at": "document_idle"
     }
+  ],
+
+  "icons": {
+    "32": "icon32.png"
+  }
 }
